Fixed img overflow in gallery and aria on menu

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -219,7 +219,7 @@ margin: 5px 0;
 .wrapper{
   display: grid;
   grid-template-columns: auto auto;
-  grid-gap: 2%;
+  grid-gap: 10px;
   margin: 0 5% 5% 5%;
 }
 .wrapper_single{
